--- a/estilos.css
+++ b/estilos.css
@@ -223,6 +223,11 @@ header {
 		font-size: 25pt;
 		text-align: center;
 }
+	.texto-secc p7{
+		display: flex;
+		font-size: 25pt;
+		text-align: left;
+}
  
 .columna img {
 margin-top: 20px; /*un margen arriba de 15 px*/
@@ -400,4 +405,5 @@ footer {
 	transform: scale(1.1);
   	transition: 100ms;
 }
+
 /***************************************************/
